--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "eomcs-codebook",
+  "productName": "EOMCS-CodeBook",
   "version": "1.0.0",
   "description": "A viewer of programming source with markdown comments",
   "main": "main.js",
@@ -16,5 +17,12 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "~1.7.8"
+  },
+  "dependencies": {
+    "electron-settings": "^3.1.2",
+    "glob": "^7.1.2",
+    "handlebars": "^4.0.10",
+    "prismjs": "^1.8.1",
+    "remarkable": "^1.7.1"
   }
 }
